Notes: Icon and Text Spacing Fixes

--- a/styles/designs/carnival/parts/_borderfeature-components.scss
+++ b/styles/designs/carnival/parts/_borderfeature-components.scss
@@ -13,6 +13,7 @@ $BorderFeatureContainerComponent: (
     padding-right: enum('ValueSet:::NULLABLE'),
     margin-bottom: enum('ValueSet:::NULLABLE'),
     position: relative,
+    line-height: not_implemented(2rem),
   ),
 );
 
