--- a/styles/designs/carnival/parts/_iconfeature-components.scss
+++ b/styles/designs/carnival/parts/_iconfeature-components.scss
@@ -6,6 +6,7 @@ $IconFeatureContainerComponent: (
     color: enum('ValueSet:::NULLABLE'),
     font-family: enum('ValueSet:::NULLABLE'),
     font-size: enum('ValueSet:::NULLABLE'),
+    line-height: not_implemented(2rem),
   )
 );
 
