--- a/styles/designs/carnival/parts/_linktolearning-components.scss
+++ b/styles/designs/carnival/parts/_linktolearning-components.scss
@@ -7,6 +7,7 @@ $LinkToLearningTitleComponent: (
     display: flex,
     flex-direction: row,
     align-items: flex-end,
+    line-height: not_implemented(2rem),
   )
 );
 
@@ -24,7 +25,6 @@ $LinkToLearningTitleTextComponent: (
     line-height: enum('ValueSet:::NULLABLE'),
     text-transform: uppercase,
     max-height: enum('ValueSet:::NULLABLE'),
-    margin-bottom: enum('ValueSet:::NULLABLE'),
   )
 );
 
@@ -39,6 +39,7 @@ $LinkToLearningBodyComponent: (
     border-bottom-color: enum('ValueSet:::NOT_NULL'),
     border-bottom-width: enum('ValueSet:::NOT_NULL'),
     border-bottom-style: solid,
+    line-height: not_implemented(2rem),
   )
 );
 
