--- a/styles/output/chemistry-pdf.css
+++ b/styles/output/chemistry-pdf.css
@@ -89,7 +89,8 @@
   padding-left: 1em;
   padding-right: 1rem;
   margin-bottom: 3rem;
-  position: relative; }
+  position: relative;
+  line-height: 2rem; }
 
 .everyday-life > .os-title {
   color: #00829B;
@@ -166,7 +167,8 @@
   padding-left: 1em;
   padding-right: 1rem;
   margin-bottom: 3rem;
-  position: relative; }
+  position: relative;
+  line-height: 2rem; }
 
 .chemist-portrait > .os-title {
   color: #00829B;
@@ -240,7 +242,8 @@
   font-weight: normal;
   border-bottom-color: #78B042;
   border-bottom-width: 0.2rem;
-  border-bottom-style: solid; }
+  border-bottom-style: solid;
+  line-height: 2rem; }
 
 .link-to-learning > .os-note-body > p {
   margin-top: 0rem;
@@ -250,20 +253,20 @@
   margin-bottom: 0.5rem;
   display: flex;
   flex-direction: row;
-  align-items: flex-end; }
+  align-items: flex-end;
+  line-height: 2rem; }
 
 .link-to-learning > .os-title > .os-title-label {
   color: #333333;
   font-family: Muli;
   font-weight: bold;
-  font-size: 1em;
+  font-size: 1.44rem;
   display: inline-block;
-  max-width: 5rem;
+  max-width: 10rem;
   word-wrap: normal;
-  line-height: 1rem;
+  line-height: 1.5rem;
   text-transform: uppercase;
-  max-height: 2rem;
-  margin-bottom: 0.2rem; }
+  max-height: 5rem; }
 
 .link-to-learning > .os-title::before {
   background: url("../../styles/designs/carnival/resources/carnival-linktolearning.svg") no-repeat top left;
@@ -321,7 +324,7 @@
   display: inline-block;
   padding-right: 0.4rem;
   position: relative;
-  bottom: -0.4rem;
+  bottom: -0.5rem;
   content: ''; }
 
 .sciences-interconnect > .os-title > .os-title-label {
@@ -335,7 +338,8 @@
 .sciences-interconnect {
   color: #333333;
   font-family: IBM Plex Sans;
-  font-size: 1.44rem; }
+  font-size: 1.44rem;
+  line-height: 2rem; }
 
 .sciences-interconnect::after {
   border-bottom-color: #F37541;
@@ -363,7 +367,7 @@
   display: inline-block;
   padding-right: 0.7rem;
   position: relative;
-  bottom: -0.8rem;
+  bottom: -1rem;
   content: ''; }
 
 [data-type='example'] > .os-title + p > [data-type='title'] {
@@ -375,7 +379,8 @@
 [data-type='example'] {
   color: #333333;
   font-family: IBM Plex Sans;
-  font-size: 1.44rem; }
+  font-size: 1.44rem;
+  line-height: 2rem; }
 
 [data-type='example']::after {
   border-bottom-color: #B32B2F;
