--- a/styles/templates/template1/parts/_example-settings.scss
+++ b/styles/templates/template1/parts/_example-settings.scss
@@ -34,7 +34,7 @@
             height: not_implemented(3.5rem),
             width: not_implemented(3.5rem),
             padding-right: not_implemented(0.7rem),
-            bottom: not_implemented(-0.8rem),
+            bottom: not_implemented(-1rem),
         ),
         Subtitle: (
             font-weight: bold,
