--- a/styles/templates/template1/parts/_linktolearning-settings.scss
+++ b/styles/templates/template1/parts/_linktolearning-settings.scss
@@ -11,11 +11,10 @@
         TitleText: (
             color: (_ref: 'colorMap:::fontBodyColor'),
             font-family: (_ref: 'typography:::titleFont'),
-            font-size: not_implemented(1em),
-            max-width: not_implemented(5rem),
-            line-height: not_implemented(1rem),
-            max-height: not_implemented(2rem),
-            margin-bottom: not_implemented(.2rem),
+            font-size: not_implemented(1.44rem),
+            max-width: not_implemented(10rem),
+            line-height: not_implemented(1.5rem),
+            max-height: not_implemented(5rem),
         ),
         Text: (
             margin-top: not_implemented(0rem),
